--- a/style.css
+++ b/style.css
@@ -8,12 +8,13 @@ ul,li {
     padding: 0;
     list-style-type: none;
 }
-h1,h2,h3 {
+h1,h2,h3,a {
     color:#222;
 }
 
 p {
     color:#555;
+    font-size: 14px;
 }
 
 header{
@@ -27,23 +28,69 @@ header{
     margin: 40px auto;
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    gap: 20px;
+    gap: 20px;    
 }
+
 
 article img, article.featured.img{
     width: 100%;
     aspect-ratio: 16/9;
 }
 
-article h1,h2,h3,h4,p,a{
-    margin:10px auto;
+article h1,h2,h3,h4,h5,p,a{
+    margin:5px auto;
 }
 
 article {
-border-top: 1px solid #f7f7f7;
+/*border-top: 1px solid #bbc7c7;
+
+border-right: 1px solid #bbc7c7;
+padding: 10px;*/
 }
 
 article h4,h5{
     color:#C74600;
     font-style: italic;
+}
+
+article.featured {
+    display:grid;
+    grid-template-columns: 1fr 2fr;
+    grid-column: span 3;   
+}
+
+
+/* responsive*/
+
+@media screen and (max-width : 980px) {
+    article.featured {
+        grid-column: span 4;
+        grid-template-columns: 1fr;
+        border-bottom: 1px solid #f4f4f4;
+        padding-bottom: 10px;
+    }
+    article.featured img {
+        grid-row: 1;
+    }
+    
+    article {
+        grid-column: span 4;
+        display:grid;
+        gap: 20px;
+        grid-template-columns: 1fr 3fr ;
+        border-bottom: 1px solid #f4f4f4;
+        padding-bottom: 10px;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width : 480px) {
+    
+    
+    
+    article {
+        
+        grid-template-columns: 2fr 2fr ;
+        gap: 10px;
+    }
 }
